Update main to output generated at 44ac269

--- a/trains/stations/A/index.html
+++ b/trains/stations/A/index.html
@@ -201,62 +201,42 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Acocks Green railway station"
         >
-          <img
-            alt="Acocks Green"
-            title="Acocks Green"
-            src="/images/trains/stations/acg.webp"
-          />
+          <img alt="Acocks Green" src="/images/trains/stations/acg.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Adderley Park railway station"
         >
-          <img
-            alt="Adderley Park"
-            title="Adderley Park"
-            src="/images/trains/stations/add.webp"
-          />
+          <img alt="Adderley Park" src="/images/trains/stations/add.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Albrighton railway station"
         >
-          <img
-            alt="Albrighton"
-            title="Albrighton"
-            src="/images/trains/stations/alb.webp"
-          />
+          <img alt="Albrighton" src="/images/trains/stations/alb.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Aldershot railway station"
         >
-          <img
-            alt="Aldershot"
-            title="Aldershot"
-            src="/images/trains/stations/aht.webp"
-          />
+          <img alt="Aldershot" src="/images/trains/stations/aht.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Alvechurch railway station"
         >
-          <img
-            alt="Alvechurch"
-            title="Alvechurch"
-            src="/images/trains/stations/alv.webp"
-          />
+          <img alt="Alvechurch" src="/images/trains/stations/alv.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Ash railway station"
         >
-          <img alt="Ash" title="Ash" src="/images/trains/stations/ash.webp" />
+          <img alt="Ash" src="/images/trains/stations/ash.webp" />
         </a>
 
         <a
@@ -265,7 +245,6 @@
         >
           <img
             alt="Ashurst New Forest"
-            title="Ashurst New Forest"
             src="/images/trains/stations/anf.webp"
           />
         </a>
@@ -274,11 +253,7 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Aston railway station"
         >
-          <img
-            alt="Aston"
-            title="Aston"
-            src="/images/trains/stations/ast.webp"
-          />
+          <img alt="Aston" src="/images/trains/stations/ast.webp" />
         </a>
       </div>
 
