--- a/trains/stations/B/index.html
+++ b/trains/stations/B/index.html
@@ -201,88 +201,56 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Banbury railway station"
         >
-          <img
-            alt="Banbury"
-            title="Banbury"
-            src="/images/trains/stations/ban.webp"
-          />
+          <img alt="Banbury" src="/images/trains/stations/ban.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Barnt Green railway station"
         >
-          <img
-            alt="Barnt Green"
-            title="Barnt Green"
-            src="/images/trains/stations/btg.webp"
-          />
+          <img alt="Barnt Green" src="/images/trains/stations/btg.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Barrow-in-Furness railway station"
         >
-          <img
-            alt="Barrow-in-Furness"
-            title="Barrow-in-Furness"
-            src="/images/trains/stations/bif.webp"
-          />
+          <img alt="Barrow-in-Furness" src="/images/trains/stations/bif.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Bearley railway station"
         >
-          <img
-            alt="Bearley"
-            title="Bearley"
-            src="/images/trains/stations/ber.webp"
-          />
+          <img alt="Bearley" src="/images/trains/stations/ber.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Beaulieu Road railway station"
         >
-          <img
-            alt="Beaulieu Road"
-            title="Beaulieu Road"
-            src="/images/trains/stations/beu.webp"
-          />
+          <img alt="Beaulieu Road" src="/images/trains/stations/beu.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Beeston railway station"
         >
-          <img
-            alt="Beeston"
-            title="Beeston"
-            src="/images/trains/stations/bee.webp"
-          />
+          <img alt="Beeston" src="/images/trains/stations/bee.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Berkswell railway station"
         >
-          <img
-            alt="Berkswell"
-            title="Berkswell"
-            src="/images/trains/stations/bkw.webp"
-          />
+          <img alt="Berkswell" src="/images/trains/stations/bkw.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Bescot Stadium railway station"
         >
-          <img
-            alt="Bescot Stadium"
-            title="Bescot Stadium"
-            src="/images/trains/stations/bsc.webp"
-          />
+          <img alt="Bescot Stadium" src="/images/trains/stations/bsc.webp" />
         </a>
 
         <a
@@ -291,7 +259,6 @@
         >
           <img
             alt="Birmingham International"
-            title="Birmingham International"
             src="/images/trains/stations/bhi.webp"
           />
         </a>
@@ -302,7 +269,6 @@
         >
           <img
             alt="Birmingham New Street"
-            title="Birmingham New Street"
             src="/images/trains/stations/bhm.webp"
           />
         </a>
@@ -313,7 +279,6 @@
         >
           <img
             alt="Birmingham Snow Hill"
-            title="Birmingham Snow Hill"
             src="/images/trains/stations/bsw.webp"
           />
         </a>
@@ -322,44 +287,28 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Blake Street railway station"
         >
-          <img
-            alt="Blake Street"
-            title="Blake Street"
-            src="/images/trains/stations/bkt.webp"
-          />
+          <img alt="Blake Street" src="/images/trains/stations/bkt.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Bordesley railway station"
         >
-          <img
-            alt="Bordesley"
-            title="Bordesley"
-            src="/images/trains/stations/bbs.webp"
-          />
+          <img alt="Bordesley" src="/images/trains/stations/bbs.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Brockenhurst railway station"
         >
-          <img
-            alt="Brockenhurst"
-            title="Brockenhurst"
-            src="/images/trains/stations/bcu.webp"
-          />
+          <img alt="Brockenhurst" src="/images/trains/stations/bcu.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Butlers Lane railway station"
         >
-          <img
-            alt="Butlers Lane"
-            title="Butlers Lane"
-            src="/images/trains/stations/bul.webp"
-          />
+          <img alt="Butlers Lane" src="/images/trains/stations/bul.webp" />
         </a>
       </div>
 
