--- a/trains/stations/D/index.html
+++ b/trains/stations/D/index.html
@@ -201,44 +201,28 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Dalmeny railway station"
         >
-          <img
-            alt="Dalmeny"
-            title="Dalmeny"
-            src="/images/trains/stations/dam.webp"
-          />
+          <img alt="Dalmeny" src="/images/trains/stations/dam.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Deansgate railway station"
         >
-          <img
-            alt="Deansgate"
-            title="Deansgate"
-            src="/images/trains/stations/dgt.webp"
-          />
+          <img alt="Deansgate" src="/images/trains/stations/dgt.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Didcot Parkway railway station"
         >
-          <img
-            alt="Didcot Parkway"
-            title="Didcot Parkway"
-            src="/images/trains/stations/did.webp"
-          />
+          <img alt="Didcot Parkway" src="/images/trains/stations/did.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Duddeston railway station"
         >
-          <img
-            alt="Duddeston"
-            title="Duddeston"
-            src="/images/trains/stations/dud.webp"
-          />
+          <img alt="Duddeston" src="/images/trains/stations/dud.webp" />
         </a>
       </div>
 
