--- a/trains/stations/E/index.html
+++ b/trains/stations/E/index.html
@@ -201,22 +201,14 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Earlswood railway station"
         >
-          <img
-            alt="Earlswood"
-            title="Earlswood"
-            src="/images/trains/stations/ewd.webp"
-          />
+          <img alt="Earlswood" src="/images/trains/stations/ewd.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Elephant & Castle railway station"
         >
-          <img
-            alt="Elephant & Castle"
-            title="Elephant & Castle"
-            src="/images/trains/stations/eph.webp"
-          />
+          <img alt="Elephant & Castle" src="/images/trains/stations/eph.webp" />
         </a>
       </div>
 
