--- a/trains/stations/F/index.html
+++ b/trains/stations/F/index.html
@@ -201,33 +201,21 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Farringdon railway station"
         >
-          <img
-            alt="Farringdon"
-            title="Farringdon"
-            src="/images/trains/stations/zfd.webp"
-          />
+          <img alt="Farringdon" src="/images/trains/stations/zfd.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Fort William railway station"
         >
-          <img
-            alt="Fort William"
-            title="Fort William"
-            src="/images/trains/stations/ftw.webp"
-          />
+          <img alt="Fort William" src="/images/trains/stations/ftw.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Four Oaks railway station"
         >
-          <img
-            alt="Four Oaks"
-            title="Four Oaks"
-            src="/images/trains/stations/fok.webp"
-          />
+          <img alt="Four Oaks" src="/images/trains/stations/fok.webp" />
         </a>
       </div>
 
