--- a/trains/stations/G/index.html
+++ b/trains/stations/G/index.html
@@ -201,55 +201,35 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Gatwick Airport railway station"
         >
-          <img
-            alt="Gatwick Airport"
-            title="Gatwick Airport"
-            src="/images/trains/stations/gtw.webp"
-          />
+          <img alt="Gatwick Airport" src="/images/trains/stations/gtw.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Glenfinnan railway station"
         >
-          <img
-            alt="Glenfinnan"
-            title="Glenfinnan"
-            src="/images/trains/stations/glf.webp"
-          />
+          <img alt="Glenfinnan" src="/images/trains/stations/glf.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Gloucester railway station"
         >
-          <img
-            alt="Gloucester"
-            title="Gloucester"
-            src="/images/trains/stations/gcr.webp"
-          />
+          <img alt="Gloucester" src="/images/trains/stations/gcr.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Gravelly Hill railway station"
         >
-          <img
-            alt="Gravelly Hill"
-            title="Gravelly Hill"
-            src="/images/trains/stations/gvh.webp"
-          />
+          <img alt="Gravelly Hill" src="/images/trains/stations/gvh.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Great Malvern railway station"
         >
-          <img
-            alt="Great Malvern"
-            title="Great Malvern"
-            src="/images/trains/stations/gmv.webp"
-          />
+          <img alt="Great Malvern" src="/images/trains/stations/gmv.webp" />
         </a>
 
         <a
@@ -258,7 +238,6 @@
         >
           <img
             alt="Glasgow Queen Street"
-            title="Glasgow Queen Street"
             src="/images/trains/stations/glq.webp"
           />
         </a>
