--- a/trains/stations/H/index.html
+++ b/trains/stations/H/index.html
@@ -201,110 +201,70 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Hall Green railway station"
         >
-          <img
-            alt="Hall Green"
-            title="Hall Green"
-            src="/images/trains/stations/hlg.webp"
-          />
+          <img alt="Hall Green" src="/images/trains/stations/hlg.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Hampton-in-Arden railway station"
         >
-          <img
-            alt="Hampton-in-Arden"
-            title="Hampton-in-Arden"
-            src="/images/trains/stations/hia.webp"
-          />
+          <img alt="Hampton-in-Arden" src="/images/trains/stations/hia.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Hamstead railway station"
         >
-          <img
-            alt="Hamstead"
-            title="Hamstead"
-            src="/images/trains/stations/hsd.webp"
-          />
+          <img alt="Hamstead" src="/images/trains/stations/hsd.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Hatton railway station"
         >
-          <img
-            alt="Hatton"
-            title="Hatton"
-            src="/images/trains/stations/htn.webp"
-          />
+          <img alt="Hatton" src="/images/trains/stations/htn.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Haymarket railway station"
         >
-          <img
-            alt="Haymarket"
-            title="Haymarket"
-            src="/images/trains/stations/hym.webp"
-          />
+          <img alt="Haymarket" src="/images/trains/stations/hym.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Hackney Wick railway station"
         >
-          <img
-            alt="Hackney Wick"
-            title="Hackney Wick"
-            src="/images/trains/stations/hkw.webp"
-          />
+          <img alt="Hackney Wick" src="/images/trains/stations/hkw.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Henley-in-Arden railway station"
         >
-          <img
-            alt="Henley-in-Arden"
-            title="Henley-in-Arden"
-            src="/images/trains/stations/hnl.webp"
-          />
+          <img alt="Henley-in-Arden" src="/images/trains/stations/hnl.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Henley-on-Thames railway station"
         >
-          <img
-            alt="Henley-on-Thames"
-            title="Henley-on-Thames"
-            src="/images/trains/stations/hot.webp"
-          />
+          <img alt="Henley-on-Thames" src="/images/trains/stations/hot.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/High Street railway station"
         >
-          <img
-            alt="High Street"
-            title="High Street"
-            src="/images/trains/stations/hst.webp"
-          />
+          <img alt="High Street" src="/images/trains/stations/hst.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Honeybourne railway station"
         >
-          <img
-            alt="Honeybourne"
-            title="Honeybourne"
-            src="/images/trains/stations/hyb.webp"
-          />
+          <img alt="Honeybourne" src="/images/trains/stations/hyb.webp" />
         </a>
       </div>
 
