--- a/trains/stations/J/index.html
+++ b/trains/stations/J/index.html
@@ -201,11 +201,7 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Jewellery Quarter railway station"
         >
-          <img
-            alt="Jewellery Quarter"
-            title="Jewellery Quarter"
-            src="/images/trains/stations/jeq.webp"
-          />
+          <img alt="Jewellery Quarter" src="/images/trains/stations/jeq.webp" />
         </a>
       </div>
 
