--- a/trains/stations/L/index.html
+++ b/trains/stations/L/index.html
@@ -201,139 +201,91 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Lancaster railway station"
         >
-          <img
-            alt="Lancaster"
-            title="Lancaster"
-            src="/images/trains/stations/lan.webp"
-          />
+          <img alt="Lancaster" src="/images/trains/stations/lan.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Lea Hall railway station"
         >
-          <img
-            alt="Lea Hall"
-            title="Lea Hall"
-            src="/images/trains/stations/leh.webp"
-          />
+          <img alt="Lea Hall" src="/images/trains/stations/leh.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Leamington Spa railway station"
         >
-          <img
-            alt="Leamington Spa"
-            title="Leamington Spa"
-            src="/images/trains/stations/lms.webp"
-          />
+          <img alt="Leamington Spa" src="/images/trains/stations/lms.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Ledbury railway station"
         >
-          <img
-            alt="Ledbury"
-            title="Ledbury"
-            src="/images/trains/stations/led.webp"
-          />
+          <img alt="Ledbury" src="/images/trains/stations/led.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Leeds railway station"
         >
-          <img
-            alt="Leeds"
-            title="Leeds"
-            src="/images/trains/stations/lds.webp"
-          />
+          <img alt="Leeds" src="/images/trains/stations/lds.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Lichfield City railway station"
         >
-          <img
-            alt="Lichfield City"
-            title="Lichfield City"
-            src="/images/trains/stations/lic.webp"
-          />
+          <img alt="Lichfield City" src="/images/trains/stations/lic.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/London Bridge railway station"
         >
-          <img
-            alt="London Bridge"
-            title="London Bridge"
-            src="/images/trains/stations/lbg.webp"
-          />
+          <img alt="London Bridge" src="/images/trains/stations/lbg.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/London Euston railway station"
         >
-          <img
-            alt="London Euston"
-            title="London Euston"
-            src="/images/trains/stations/eus.webp"
-          />
+          <img alt="London Euston" src="/images/trains/stations/eus.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/London Marylebone railway station"
         >
-          <img
-            alt="London Marylebone"
-            title="London Marylebone"
-            src="/images/trains/stations/myb.webp"
-          />
+          <img alt="London Marylebone" src="/images/trains/stations/myb.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Longbridge railway station"
         >
-          <img
-            alt="Longbridge"
-            title="Longbridge"
-            src="/images/trains/stations/lob.webp"
-          />
+          <img alt="Longbridge" src="/images/trains/stations/lob.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Lye railway station"
         >
-          <img alt="Lye" title="Lye" src="/images/trains/stations/lye.webp" />
+          <img alt="Lye" src="/images/trains/stations/lye.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Lymington Pier railway station"
         >
-          <img
-            alt="Lymington Pier"
-            title="Lymington Pier"
-            src="/images/trains/stations/lyp.webp"
-          />
+          <img alt="Lymington Pier" src="/images/trains/stations/lyp.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Lymington Town railway station"
         >
-          <img
-            alt="Lymington Town"
-            title="Lymington Town"
-            src="/images/trains/stations/lyt.webp"
-          />
+          <img alt="Lymington Town" src="/images/trains/stations/lyt.webp" />
         </a>
       </div>
 
