--- a/trains/stations/M/index.html
+++ b/trains/stations/M/index.html
@@ -201,11 +201,7 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Malvern Link railway station"
         >
-          <img
-            alt="Malvern Link"
-            title="Malvern Link"
-            src="/images/trains/stations/mvl.webp"
-          />
+          <img alt="Malvern Link" src="/images/trains/stations/mvl.webp" />
         </a>
 
         <a
@@ -214,7 +210,6 @@
         >
           <img
             alt="Manchester Airport"
-            title="Manchester Airport"
             src="/images/trains/stations/mia.webp"
           />
         </a>
@@ -225,7 +220,6 @@
         >
           <img
             alt="Manchester Piccadilly"
-            title="Manchester Piccadilly"
             src="/images/trains/stations/man.webp"
           />
         </a>
@@ -236,7 +230,6 @@
         >
           <img
             alt="Manchester Oxford Road"
-            title="Manchester Oxford Road"
             src="/images/trains/stations/mco.webp"
           />
         </a>
@@ -245,44 +238,28 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Marston Green railway station"
         >
-          <img
-            alt="Marston Green"
-            title="Marston Green"
-            src="/images/trains/stations/mgn.webp"
-          />
+          <img alt="Marston Green" src="/images/trains/stations/mgn.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Matlock railway station"
         >
-          <img
-            alt="Matlock"
-            title="Matlock"
-            src="/images/trains/stations/mat.webp"
-          />
+          <img alt="Matlock" src="/images/trains/stations/mat.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Matlock Bath railway station"
         >
-          <img
-            alt="Matlock Bath"
-            title="Matlock Bath"
-            src="/images/trains/stations/mtb.webp"
-          />
+          <img alt="Matlock Bath" src="/images/trains/stations/mtb.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Moreton-in-Marsh railway station"
         >
-          <img
-            alt="Moreton-in-Marsh"
-            title="Moreton-in-Marsh"
-            src="/images/trains/stations/mim.webp"
-          />
+          <img alt="Moreton-in-Marsh" src="/images/trains/stations/mim.webp" />
         </a>
       </div>
 
