--- a/trains/stations/N/index.html
+++ b/trains/stations/N/index.html
@@ -201,44 +201,28 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Nottingham railway station"
         >
-          <img
-            alt="Nottingham"
-            title="Nottingham"
-            src="/images/trains/stations/not.webp"
-          />
+          <img alt="Nottingham" src="/images/trains/stations/not.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/North Queensferry railway station"
         >
-          <img
-            alt="North Queensferry"
-            title="North Queensferry"
-            src="/images/trains/stations/nqu.webp"
-          />
+          <img alt="North Queensferry" src="/images/trains/stations/nqu.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Northfield railway station"
         >
-          <img
-            alt="Northfield"
-            title="Northfield"
-            src="/images/trains/stations/nfd.webp"
-          />
+          <img alt="Northfield" src="/images/trains/stations/nfd.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Nuneaton railway station"
         >
-          <img
-            alt="Nuneaton"
-            title="Nuneaton"
-            src="/images/trains/stations/nun.webp"
-          />
+          <img alt="Nuneaton" src="/images/trains/stations/nun.webp" />
         </a>
       </div>
 
