--- a/trains/stations/O/index.html
+++ b/trains/stations/O/index.html
@@ -201,33 +201,21 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Oakham railway station"
         >
-          <img
-            alt="Oakham"
-            title="Oakham"
-            src="/images/trains/stations/okm.webp"
-          />
+          <img alt="Oakham" src="/images/trains/stations/okm.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Old Hill railway station"
         >
-          <img
-            alt="Old Hill"
-            title="Old Hill"
-            src="/images/trains/stations/ohl.webp"
-          />
+          <img alt="Old Hill" src="/images/trains/stations/ohl.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Olton railway station"
         >
-          <img
-            alt="Olton"
-            title="Olton"
-            src="/images/trains/stations/olt.webp"
-          />
+          <img alt="Olton" src="/images/trains/stations/olt.webp" />
         </a>
       </div>
 
