--- a/trains/stations/P/index.html
+++ b/trains/stations/P/index.html
@@ -201,55 +201,35 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Partick railway station"
         >
-          <img
-            alt="Partick"
-            title="Partick"
-            src="/images/trains/stations/ptk.webp"
-          />
+          <img alt="Partick" src="/images/trains/stations/ptk.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Penkridge railway station"
         >
-          <img
-            alt="Penkridge"
-            title="Penkridge"
-            src="/images/trains/stations/pkg.webp"
-          />
+          <img alt="Penkridge" src="/images/trains/stations/pkg.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Perry Barr railway station"
         >
-          <img
-            alt="Perry Barr"
-            title="Perry Barr"
-            src="/images/trains/stations/pry.webp"
-          />
+          <img alt="Perry Barr" src="/images/trains/stations/pry.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Polesworth railway station"
         >
-          <img
-            alt="Polesworth"
-            title="Polesworth"
-            src="/images/trains/stations/psw.webp"
-          />
+          <img alt="Polesworth" src="/images/trains/stations/psw.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Preston railway station"
         >
-          <img
-            alt="Preston"
-            title="Preston"
-            src="/images/trains/stations/pre.webp"
-          />
+          <img alt="Preston" src="/images/trains/stations/pre.webp" />
         </a>
       </div>
 
