--- a/trains/stations/R/index.html
+++ b/trains/stations/R/index.html
@@ -201,55 +201,35 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Reading railway station"
         >
-          <img
-            alt="Reading"
-            title="Reading"
-            src="/images/trains/stations/rdg.webp"
-          />
+          <img alt="Reading" src="/images/trains/stations/rdg.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Redditch railway station"
         >
-          <img
-            alt="Redditch"
-            title="Redditch"
-            src="/images/trains/stations/rdt.webp"
-          />
+          <img alt="Redditch" src="/images/trains/stations/rdt.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Rowley Regis railway station"
         >
-          <img
-            alt="Rowley Regis"
-            title="Rowley Regis"
-            src="/images/trains/stations/row.webp"
-          />
+          <img alt="Rowley Regis" src="/images/trains/stations/row.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Ruabon railway station"
         >
-          <img
-            alt="Ruabon"
-            title="Ruabon"
-            src="/images/trains/stations/rua.webp"
-          />
+          <img alt="Ruabon" src="/images/trains/stations/rua.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Rugby railway station"
         >
-          <img
-            alt="Rugby"
-            title="Rugby"
-            src="/images/trains/stations/rug.webp"
-          />
+          <img alt="Rugby" src="/images/trains/stations/rug.webp" />
         </a>
 
         <a
@@ -258,7 +238,6 @@
         >
           <img
             alt="Rugeley Trent Valley"
-            title="Rugeley Trent Valley"
             src="/images/trains/stations/rgl.webp"
           />
         </a>
