--- a/trains/stations/S/index.html
+++ b/trains/stations/S/index.html
@@ -203,7 +203,6 @@
         >
           <img
             alt="Sandwell and Dudley"
-            title="Sandwell and Dudley"
             src="/images/trains/stations/sad.webp"
           />
         </a>
@@ -212,66 +211,42 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Selly Oak railway station"
         >
-          <img
-            alt="Selly Oak"
-            title="Selly Oak"
-            src="/images/trains/stations/sly.webp"
-          />
+          <img alt="Selly Oak" src="/images/trains/stations/sly.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Shenstone railway station"
         >
-          <img
-            alt="Shenstone"
-            title="Shenstone"
-            src="/images/trains/stations/sen.webp"
-          />
+          <img alt="Shenstone" src="/images/trains/stations/sen.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Shipton railway station"
         >
-          <img
-            alt="Shipton"
-            title="Shipton"
-            src="/images/trains/stations/sip.webp"
-          />
+          <img alt="Shipton" src="/images/trains/stations/sip.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Shirley railway station"
         >
-          <img
-            alt="Shirley"
-            title="Shirley"
-            src="/images/trains/stations/srl.webp"
-          />
+          <img alt="Shirley" src="/images/trains/stations/srl.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Shrewsbury railway station"
         >
-          <img
-            alt="Shrewsbury"
-            title="Shrewsbury"
-            src="/images/trains/stations/shr.webp"
-          />
+          <img alt="Shrewsbury" src="/images/trains/stations/shr.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Small Heath railway station"
         >
-          <img
-            alt="Small Heath"
-            title="Small Heath"
-            src="/images/trains/stations/sma.webp"
-          />
+          <img alt="Small Heath" src="/images/trains/stations/sma.webp" />
         </a>
 
         <a
@@ -280,7 +255,6 @@
         >
           <img
             alt="Smethwick Galton Bridge"
-            title="Smethwick Galton Bridge"
             src="/images/trains/stations/sgb.webp"
           />
         </a>
@@ -291,7 +265,6 @@
         >
           <img
             alt="Smethwick Rolfe Street"
-            title="Smethwick Rolfe Street"
             src="/images/trains/stations/smr.webp"
           />
         </a>
@@ -300,77 +273,49 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Spring Road railway station"
         >
-          <img
-            alt="Spring Road"
-            title="Spring Road"
-            src="/images/trains/stations/sri.webp"
-          />
+          <img alt="Spring Road" src="/images/trains/stations/sri.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Stafford railway station"
         >
-          <img
-            alt="Stafford"
-            title="Stafford"
-            src="/images/trains/stations/sta.webp"
-          />
+          <img alt="Stafford" src="/images/trains/stations/sta.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Stamford railway station"
         >
-          <img
-            alt="Stamford"
-            title="Stamford"
-            src="/images/trains/stations/smd.webp"
-          />
+          <img alt="Stamford" src="/images/trains/stations/smd.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Stansted Airport railway station"
         >
-          <img
-            alt="Stansted Airport"
-            title="Stansted Airport"
-            src="/images/trains/stations/ssd.webp"
-          />
+          <img alt="Stansted Airport" src="/images/trains/stations/ssd.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Stechford railway station"
         >
-          <img
-            alt="Stechford"
-            title="Stechford"
-            src="/images/trains/stations/scf.webp"
-          />
+          <img alt="Stechford" src="/images/trains/stations/scf.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Stoke-on-Trent railway station"
         >
-          <img
-            alt="Stoke-on-Trent"
-            title="Stoke-on-Trent"
-            src="/images/trains/stations/sot.webp"
-          />
+          <img alt="Stoke-on-Trent" src="/images/trains/stations/sot.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Stone railway station"
         >
-          <img
-            alt="Stone"
-            title="Stone"
-            src="/images/trains/stations/sne.webp"
-          />
+          <img alt="Stone" src="/images/trains/stations/sne.webp" />
         </a>
 
         <a
@@ -379,7 +324,6 @@
         >
           <img
             alt="Stourbridge Junction"
-            title="Stourbridge Junction"
             src="/images/trains/stations/sbj.webp"
           />
         </a>
@@ -388,11 +332,7 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Stourbridge Town railway station"
         >
-          <img
-            alt="Stourbridge Town"
-            title="Stourbridge Town"
-            src="/images/trains/stations/sbt.webp"
-          />
+          <img alt="Stourbridge Town" src="/images/trains/stations/sbt.webp" />
         </a>
 
         <a
@@ -401,7 +341,6 @@
         >
           <img
             alt="Stratford-upon-Avon Parkway"
-            title="Stratford-upon-Avon Parkway"
             src="/images/trains/stations/sty.webp"
           />
         </a>
@@ -410,22 +349,14 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Sutton Coldfield railway station"
         >
-          <img
-            alt="Sutton Coldfield"
-            title="Sutton Coldfield"
-            src="/images/trains/stations/sut.webp"
-          />
+          <img alt="Sutton Coldfield" src="/images/trains/stations/sut.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Swindon railway station"
         >
-          <img
-            alt="Swindon"
-            title="Swindon"
-            src="/images/trains/stations/swi.webp"
-          />
+          <img alt="Swindon" src="/images/trains/stations/swi.webp" />
         </a>
       </div>
 
