--- a/trains/stations/T/index.html
+++ b/trains/stations/T/index.html
@@ -203,7 +203,6 @@
         >
           <img
             alt="Tame Bridge Parkway"
-            title="Tame Bridge Parkway"
             src="/images/trains/stations/tab.webp"
           />
         </a>
@@ -212,99 +211,63 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Telford Central railway station"
         >
-          <img
-            alt="Telford Central"
-            title="Telford Central"
-            src="/images/trains/stations/tfc.webp"
-          />
+          <img alt="Telford Central" src="/images/trains/stations/tfc.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/The Hawthorns railway station"
         >
-          <img
-            alt="The Hawthorns"
-            title="The Hawthorns"
-            src="/images/trains/stations/thw.webp"
-          />
+          <img alt="The Hawthorns" src="/images/trains/stations/thw.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/The Lakes railway station"
         >
-          <img
-            alt="The Lakes"
-            title="The Lakes"
-            src="/images/trains/stations/tlk.webp"
-          />
+          <img alt="The Lakes" src="/images/trains/stations/tlk.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Tile Hill railway station"
         >
-          <img
-            alt="Tile Hill"
-            title="Tile Hill"
-            src="/images/trains/stations/thl.webp"
-          />
+          <img alt="Tile Hill" src="/images/trains/stations/thl.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Totnes railway station"
         >
-          <img
-            alt="Totnes"
-            title="Totnes"
-            src="/images/trains/stations/tot.webp"
-          />
+          <img alt="Totnes" src="/images/trains/stations/tot.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Tottenham Hale railway station"
         >
-          <img
-            alt="Tottenham Hale"
-            title="Tottenham Hale"
-            src="/images/trains/stations/tom.webp"
-          />
+          <img alt="Tottenham Hale" src="/images/trains/stations/tom.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Tulse Hill railway station"
         >
-          <img
-            alt="Tulse Hill"
-            title="Tulse Hill"
-            src="/images/trains/stations/tuh.webp"
-          />
+          <img alt="Tulse Hill" src="/images/trains/stations/tuh.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Twyford railway station"
         >
-          <img
-            alt="Twyford"
-            title="Twyford"
-            src="/images/trains/stations/twy.webp"
-          />
+          <img alt="Twyford" src="/images/trains/stations/twy.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Tyseley railway station"
         >
-          <img
-            alt="Tyseley"
-            title="Tyseley"
-            src="/images/trains/stations/tys.webp"
-          />
+          <img alt="Tyseley" src="/images/trains/stations/tys.webp" />
         </a>
       </div>
 
