--- a/trains/stations/W/index.html
+++ b/trains/stations/W/index.html
@@ -201,121 +201,77 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Water Orton railway station"
         >
-          <img
-            alt="Water Orton"
-            title="Water Orton"
-            src="/images/trains/stations/wto.webp"
-          />
+          <img alt="Water Orton" src="/images/trains/stations/wto.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Walsall railway station"
         >
-          <img
-            alt="Walsall"
-            title="Walsall"
-            src="/images/trains/stations/wsl.webp"
-          />
+          <img alt="Walsall" src="/images/trains/stations/wsl.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Warwick railway station"
         >
-          <img
-            alt="Warwick"
-            title="Warwick"
-            src="/images/trains/stations/wrw.webp"
-          />
+          <img alt="Warwick" src="/images/trains/stations/wrw.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Warwick Parkway railway station"
         >
-          <img
-            alt="Warwick Parkway"
-            title="Warwick Parkway"
-            src="/images/trains/stations/wrp.webp"
-          />
+          <img alt="Warwick Parkway" src="/images/trains/stations/wrp.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Whitehaven railway station"
         >
-          <img
-            alt="Whitehaven"
-            title="Whitehaven"
-            src="/images/trains/stations/wth.webp"
-          />
+          <img alt="Whitehaven" src="/images/trains/stations/wth.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Wilmcote railway station"
         >
-          <img
-            alt="Wilmcote"
-            title="Wilmcote"
-            src="/images/trains/stations/wvs.webp"
-          />
+          <img alt="Wilmcote" src="/images/trains/stations/wvs.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Wilmslow railway station"
         >
-          <img
-            alt="Wilmslow"
-            title="Wilmslow"
-            src="/images/trains/stations/wml.webp"
-          />
+          <img alt="Wilmslow" src="/images/trains/stations/wml.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Wilnecote railway station"
         >
-          <img
-            alt="Wilnecote"
-            title="Wilnecote"
-            src="/images/trains/stations/wne.webp"
-          />
+          <img alt="Wilnecote" src="/images/trains/stations/wne.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Witton railway station"
         >
-          <img
-            alt="Witton"
-            title="Witton"
-            src="/images/trains/stations/wtt.webp"
-          />
+          <img alt="Witton" src="/images/trains/stations/wtt.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Woking railway station"
         >
-          <img
-            alt="Woking"
-            title="Woking"
-            src="/images/trains/stations/wok.webp"
-          />
+          <img alt="Woking" src="/images/trains/stations/wok.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Wootton Wawen railway station"
         >
-          <img
-            alt="Wootton Wawen"
-            title="Wootton Wawen"
-            src="/images/trains/stations/www.webp"
-          />
+          <img alt="Wootton Wawen" src="/images/trains/stations/www.webp" />
         </a>
 
         <a
@@ -324,7 +280,6 @@
         >
           <img
             alt="Worcester Foregate Street"
-            title="Worcester Foregate Street"
             src="/images/trains/stations/wof.webp"
           />
         </a>
@@ -335,7 +290,6 @@
         >
           <img
             alt="Worcester Shrub Hill"
-            title="Worcester Shrub Hill"
             src="/images/trains/stations/wos.webp"
           />
         </a>
@@ -346,7 +300,6 @@
         >
           <img
             alt="Worcestershire Parkway"
-            title="Worcestershire Parkway"
             src="/images/trains/stations/wop.webp"
           />
         </a>
@@ -355,22 +308,14 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Wylde Green railway station"
         >
-          <img
-            alt="Wylde Green"
-            title="Wylde Green"
-            src="/images/trains/stations/wyl.webp"
-          />
+          <img alt="Wylde Green" src="/images/trains/stations/wyl.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Wythall railway station"
         >
-          <img
-            alt="Wythall"
-            title="Wythall"
-            src="/images/trains/stations/wyt.webp"
-          />
+          <img alt="Wythall" src="/images/trains/stations/wyt.webp" />
         </a>
       </div>
 
