--- a/trains/stations/Y/index.html
+++ b/trains/stations/Y/index.html
@@ -201,18 +201,14 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Yardley Wood railway station"
         >
-          <img
-            alt="Yardley Wood"
-            title="Yardley Wood"
-            src="/images/trains/stations/yrd.webp"
-          />
+          <img alt="Yardley Wood" src="/images/trains/stations/yrd.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/York railway station"
         >
-          <img alt="York" title="York" src="/images/trains/stations/yrk.webp" />
+          <img alt="York" src="/images/trains/stations/yrk.webp" />
         </a>
       </div>
 
