--- a/trains/stations/C/index.html
+++ b/trains/stations/C/index.html
@@ -201,187 +201,119 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Cambridge railway station"
         >
-          <img
-            alt="Cambridge"
-            title="Cambridge"
-            src="/images/trains/stations/cbg.webp"
-          />
+          <img alt="Cambridge" src="/images/trains/stations/cbg.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Cambridge North railway station"
         >
-          <img
-            alt="Cambridge North"
-            title="Cambridge North"
-            src="/images/trains/stations/cmb.webp"
-          />
+          <img alt="Cambridge North" src="/images/trains/stations/cmb.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Canley railway station"
         >
-          <img
-            alt="Canley"
-            title="Canley"
-            src="/images/trains/stations/cnl.webp"
-          />
+          <img alt="Canley" src="/images/trains/stations/cnl.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Chester railway station"
         >
-          <img
-            alt="Chester"
-            title="Chester"
-            src="/images/trains/stations/ctr.webp"
-          />
+          <img alt="Chester" src="/images/trains/stations/ctr.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Chester Road railway station"
         >
-          <img
-            alt="Chester Road"
-            title="Chester Road"
-            src="/images/trains/stations/crd.webp"
-          />
+          <img alt="Chester Road" src="/images/trains/stations/crd.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Chirk railway station"
         >
-          <img
-            alt="Chirk"
-            title="Chirk"
-            src="/images/trains/stations/crk.webp"
-          />
+          <img alt="Chirk" src="/images/trains/stations/crk.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Church Stretton railway station"
         >
-          <img
-            alt="Church Stretton"
-            title="Church Stretton"
-            src="/images/trains/stations/ctt.webp"
-          />
+          <img alt="Church Stretton" src="/images/trains/stations/ctt.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Claverdon railway station"
         >
-          <img
-            alt="Claverdon"
-            title="Claverdon"
-            src="/images/trains/stations/clv.webp"
-          />
+          <img alt="Claverdon" src="/images/trains/stations/clv.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Colwall railway station"
         >
-          <img
-            alt="Colwall"
-            title="Colwall"
-            src="/images/trains/stations/cwl.webp"
-          />
+          <img alt="Colwall" src="/images/trains/stations/cwl.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Corkickle railway station"
         >
-          <img
-            alt="Corkickle"
-            title="Corkickle"
-            src="/images/trains/stations/ckl.webp"
-          />
+          <img alt="Corkickle" src="/images/trains/stations/ckl.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Corrour railway station"
         >
-          <img
-            alt="Corrour"
-            title="Corrour"
-            src="/images/trains/stations/crr.webp"
-          />
+          <img alt="Corrour" src="/images/trains/stations/crr.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Coseley railway station"
         >
-          <img
-            alt="Coseley"
-            title="Coseley"
-            src="/images/trains/stations/csy.webp"
-          />
+          <img alt="Coseley" src="/images/trains/stations/csy.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Cosford railway station"
         >
-          <img
-            alt="Cosford"
-            title="Cosford"
-            src="/images/trains/stations/cos.webp"
-          />
+          <img alt="Cosford" src="/images/trains/stations/cos.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Coventry railway station"
         >
-          <img
-            alt="Coventry"
-            title="Coventry"
-            src="/images/trains/stations/cov.webp"
-          />
+          <img alt="Coventry" src="/images/trains/stations/cov.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Cradley Heath railway station"
         >
-          <img
-            alt="Cradley Heath"
-            title="Cradley Heath"
-            src="/images/trains/stations/cra.webp"
-          />
+          <img alt="Cradley Heath" src="/images/trains/stations/cra.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Crewe railway station"
         >
-          <img
-            alt="Crewe"
-            title="Crewe"
-            src="/images/trains/stations/cre.webp"
-          />
+          <img alt="Crewe" src="/images/trains/stations/cre.webp" />
         </a>
 
         <a
           class="station-img"
           href="https://wikipedia.org/wiki/Cromford railway station"
         >
-          <img
-            alt="Cromford"
-            title="Cromford"
-            src="/images/trains/stations/cmf.webp"
-          />
+          <img alt="Cromford" src="/images/trains/stations/cmf.webp" />
         </a>
       </div>
 
