--- a/trains/stations/K/index.html
+++ b/trains/stations/K/index.html
@@ -201,11 +201,7 @@
           class="station-img"
           href="https://wikipedia.org/wiki/Kingham railway station"
         >
-          <img
-            alt="Kingham"
-            title="Kingham"
-            src="/images/trains/stations/kgm.webp"
-          />
+          <img alt="Kingham" src="/images/trains/stations/kgm.webp" />
         </a>
       </div>
 
