--- a/trains/stations/U/index.html
+++ b/trains/stations/U/index.html
@@ -201,11 +201,7 @@
           class="station-img"
           href="https://wikipedia.org/wiki/University railway station"
         >
-          <img
-            alt="University"
-            title="University"
-            src="/images/trains/stations/uni.webp"
-          />
+          <img alt="University" src="/images/trains/stations/uni.webp" />
         </a>
       </div>
 
